--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ function carousel() {
       Що ж вас там чекає? Десяток рок-груп "Друга ріка","Лікування кульбабками","Димна Суміш","Кожаный Олень" і тд.
       Також зустрінуться пивовари всієї України і ви матимете змогу скуштувати будь-яке на смак пиво
         </p>
-    <p class="w3-xxlarge"><strong>Купити запрошення можна тут</strong>обмежена кількість, не пропусти свій шанс:)</p>
+    <p class="w3-xxlarge"><strong>Купити запрошення можна тут:</strong>  обмежена кількість, не пропусти свій шанс:)</p>
     
     <form action="/action_page.php" target="_blank">
       <p><input class="w3-input w3-padding-16 w3-border" type="ПІБ" placeholder="Name" required name="Name"></p>
