--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     </div>
   </div>
   <script>
-   
+   </header>
    // автоматичне сладшоу
 var myIndex = 0;
 carousel();
