--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap 4 Website Example</title>
+  <title>pub "OLDSKULL"</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -25,19 +25,19 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="tkachukk/old.jpg" alt="OLDSKULL" width="1100" height="500">
+      <img src="tkachukk/pivas.jpg" alt="OLDSKULL" width="1100" height="500">
     <div class="carousel-caption">
         <h3>OLDSKULL</h3>
       </div>   
     </div>
     
     <div class="carousel-item">
-      <img src="tkachukk/beer1.jpg" alt="BEER" width="1100" height="500">
+      <img src="tkachukk/palochka.jpg" alt="BEER" width="1100" height="500">
       <div class="carousel-caption">
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="tkachukk/kiss.jpg" alt="KISS" width="1100" height="500">
+      <img src="tkachukk/butulka.jpg" alt="KISS" width="1100" height="500">
       <div class="carousel-caption">
       </div>   
     </div>
@@ -50,16 +50,6 @@
   </a>
 </div>
     
- 
-  <!-- Left and right controls -->
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
-</div> 
-
 <!-- картинки -->
   <div class="container">
   <h2>OUR TEAM</h2>
