--- a/page2.html
+++ b/page2.html
@@ -27,7 +27,7 @@
     <div class="carousel-item active">
       <img src="tkachukk/pivas.jpg" alt="OLDSKULL" width="1100" height="500">
     <div class="carousel-caption">
-        <h3>OLDSKULL</h3>
+        <h3 class="float-center" >OLDSKULL</h3>
       </div>   
     </div>
     
