--- a/page2.html
+++ b/page2.html
@@ -55,7 +55,7 @@
   <h2>OUR TEAM</h2>
   <p>Use the float classes to float the image to the left or to the right:</p> 
   <img src="tkachukk/i7.jpg" class="float-left" alt="Person" width="304" height="236"> 
-  <img src="tkachukk/i7.jpg" class="float-center" alt="Person" width="304" height="236"> 
+  <img src="tkachukk/i.jpg" class="float-center" alt="Person" width="304" height="236"> 
   <img src="tkachukk/i3.jpg" class="float-right" alt="Person" width="304" height="236"> 
 </div>
   
