--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>pub "OLDSKULL"</title>
+  <title>Måneskin</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -16,32 +16,42 @@
   </style>
 </head>
 <body>
-<!-- слайдшоу -->
-    <div id="demo" class="carousel slide" data-ride="carousel">
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <h1>Måneskin</h1>
+  <p>Rock 'n' Roll Never Dies</p> 
+</div>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+  </style>
+</head>
+<body>
+<div id="demo" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
   <ul class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
     <li data-target="#demo" data-slide-to="1"></li>
     <li data-target="#demo" data-slide-to="2"></li>
   </ul>
+  <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="tkachukk/pivas.jpg" alt="OLDSKULL" width="1100" height="500">
-    <div class="carousel-caption">
-        <h3 class="float-center" >OLDSKULL</h3>
-      </div>   
-    </div>
-    
-    <div class="carousel-item">
-      <img src="tkachukk/palochka.jpg" alt="BEER" width="1100" height="500">
-      <div class="carousel-caption">
-      </div>   
+      <img src="https://cutt.ly/DntjRUl" alt="Переможці Євробачення 2021" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="tkachukk/butulka.jpg" alt="KISS" width="1100" height="500">
-      <div class="carousel-caption">
-      </div>   
+      <img src="https://cutt.ly/tntlt0O" alt="Фото з виступу в фіналі з піснею Zitti E Buoni" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="https://cutt.ly/9nthAhK" alt="Фото з прес-конференції" width="1100" height="500">
     </div>
   </div>
+  <!-- Left and right controls -->
   <a class="carousel-control-prev" href="#demo" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
@@ -49,62 +59,112 @@
     <span class="carousel-control-next-icon"></span>
   </a>
 </div>
-    
-<!-- картинки -->
-  <div class="container">
-  <h2>OUR TEAM</h2>
-  <p>Use the float classes to float the image to the left or to the right:</p> 
-  <img src="tkachukk/i7.jpg" class="float-left" alt="Person" width="304" height="236"> 
-  <img src="tkachukk/i.jpg" class="float-center" alt="Person" width="304" height="236"> 
-  <img src="tkachukk/i3.jpg" class="float-right" alt="Person" width="304" height="236"> 
-</div>
-  
- 
-  
-<!-- <div class="container" style="margin-top:30px">
-  <div class="row">
-    <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <hr class="d-sm-none">
+<!--   Card Image  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="container">
+  <h2></h2>
+  <p></p>
+  <div class="card img-fluid" style="  width: 100%;
+    height: 100%;">
+    <img class="card-img-top" src="https://cutt.ly/TntbmyW" alt="Card image" style="width="1100" height="500"">
+    <div class="card-img-overlay">
+      <h4 class="card-title"> Даміано Давид</h4>
+      <p class="card-text">вокаліст</p>
+<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
     </div>
-    <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <div class="card img-fluid" style=" width: 100%;
+    height: 100%;">
+    <img class="card-img-top" src="https://cutt.ly/untbOU5" alt="Card image" style="width="1100" height="500"">
+    <div class="card-img-overlay">
+      <h4 class="card-title"> Вікторія Де Анджеліс</h4>
+      <p class="card-text">басистка</p>
+<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
+    </div>
+          <div class="card img-fluid" style="width="1100" height="500"">
+    <img class="card-img-top" src="https://cutt.ly/9ntnqsP" alt="Card image" style="width="1100" height="500"">
+    <div class="card-img-overlay">
+      <h4 class="card-title"> Томас Раджі</h4>
+      <p class="card-text">гітарист</p>
+<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
+    </div>
+              </div>
+          <div class="card img-fluid" style="width="1100" height="500"">
+    <img class="card-img-top" src="https://cutt.ly/TntbBtx" alt="Card image" style="width="1100" height="500"">
+    <div class="card-img-overlay">
+      <h4 class
+="card-title"> Ітан Торкйо</h4>
+      <p class="card-text">барабанщик</p>
+<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
     </div>
   </div>
 </div>
- -->
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
+<!--   Accordion -->
+    <head>
+  <title>Bootstrap Example</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+     <body>
+<div class="container">
+  <h2>Instagram сторінки групи та учасників</h2>
+  <p></p>
+  <p></p>
+  <p></p>                                          
+  <div class="dropdown">
+    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+      links
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#"> <div class="card-body">
+          <a href="https://www.instagram.com/maneskinofficial/?utm_medium=copy_link"
+          href="default.asp"
+          target="_blank"> Band instagram </a></p></a> </div></a>
+      <a class="dropdown-item" href="#"> <div class="card-body">
+       <a href="https://www.instagram.com/ykaaar/?utm_medium=copy_link"
+          href="default.asp"
+          target="_blank"> Damiano David instagram </a></p></a> 
+        </div></a>
+      <a class="dropdown-item" href="#"><div class="card-body">
+        <a href="https:https://www.instagram.com/vicdeangelis/?utm_medium=copy_link"
+                                                                                 href="default.asp"
+                                                                                 target="_blank"> Victoria De Angelis instagram </a></p></a>    </div></a>
+       <a class="dropdown-item" href="#"><div class="card-body">
+         <a href="https://www.instagram.com/thomasraggi__/?utm_medium=copy_link"
+                                                                                 href="default.asp"
+                                                                                 target="_blank"> Thomas Raggi instagram </a></p></a>   </div></a>
+       <a class="dropdown-item" href="#">   <div class="card-body">
+        <a href="https://www.instagram.com/ethaneskin/?utm_medium=copy_link"
+                                                                                 href="default.asp"
+                                                                                 target="_blank"> Ethan Torchio instagram </a></p></a>  </div></a>
+    </div>
+  </div>
 </div>
-
+<head>
+  <title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="container">
+  <h2> Фотогалерея</h2>
+  <p></p> 
+  <img src="https://cutt.ly/EntWNdn" class="float-left" alt="Paris" width="304" height="236"> 
+  <img src="https://cutt.ly/TntEQQr" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="https://cutt.ly/VntERg2" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="https://cutt.ly/7ntRutb" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="https://cutt.ly/wntOtgO" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="https://cutt.ly/9ntReS7" class="float-centr" alt="Paris" width="304" height="236"> 
+</div>
 </body>
 </html>
