--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Måneskin</title>
+  <title>OLDSKULL</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -17,14 +17,15 @@
 </head>
 <body>
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>Måneskin</h1>
-  <p>Rock 'n' Roll Never Dies</p> 
+  <h1>pub "OLDSKULL"</h1>
+  <p>Любите провести час в шумній компанії? Поспілкуватися за келихом пива? Обожнюєте класичний рок?
+      Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? Тоді вам до нас)</p> 
 </div>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
-  /* Make the image fully responsive */
+ 
   .carousel-inner img {
     width: 100%;
     height: 100%;
@@ -39,7 +40,7 @@
     <li data-target="#demo" data-slide-to="1"></li>
     <li data-target="#demo" data-slide-to="2"></li>
   </ul>
-  <!-- The slideshow -->
+  <!-- слайдшоу -->
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://cutt.ly/DntjRUl" alt="Переможці Євробачення 2021" width="1100" height="500">
