--- a/page2.html
+++ b/page2.html
@@ -43,13 +43,13 @@
   <!-- слайдшоу -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://cutt.ly/DntjRUl" alt="Переможці Євробачення 2021" width="1100" height="500">
+      <img src="tkachukk/kiss.jpg" alt="фотографія тимчасово зникла, вибачте за незручності" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="https://cutt.ly/tntlt0O" alt="Фото з виступу в фіналі з піснею Zitti E Buoni" width="1100" height="500">
+      <img src="tkachukk/beer1.jpg" alt="фотографія тимчасово зникла, вибачте за незручності" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="https://cutt.ly/9nthAhK" alt="Фото з прес-конференції" width="1100" height="500">
+      <img src="tkachukk/old.jpg" alt="фотографія тимчасово зникла, вибачте за незручності" width="1100" height="500">
     </div>
   </div>
   <!-- Left and right controls -->
