--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 </style>
 <body>
 
-<!-- Навігація-->
+<!-- Навігація  
 <div class="w3-top w3-hide-small">
   <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
     <a href="#" class="w3-bar-item w3-button">Home</a>
@@ -45,18 +45,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 </div>
   
 <!-- Тіпа слайдшоу -->
-<!-- <header class="bgimg w3-display-container w3-grayscale-min" id="home">
-  <div class="w3-display-bottomleft w3-padding">
-    <span class="w3-tag w3-xlarge">Open from 10am to 12pm</span>
-  </div>
-  <div class="w3-display-middle w3-center">
-    <span class="w3-text-white w3-hide-small" style="font-size:100px">thin<br>CRUST PIZZA</span>
-    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:60px"><b>thin<br>CRUST PIZZA</b></span>
-    <p><a href="#menu" class="w3-button w3-xxlarge w3-black">тут ти можеш переглянути меню</a></p>
-  </div>
-</header>
- -->
-  
   <div class="mySlides w3-display-container w3-center">
     <img src="tkachukk/old.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32  w3-hide-large">
@@ -94,8 +82,32 @@ function carousel() {
 }
     }
 }
-</script>
+</script>  -->
 
+  
+<!-- слайдшоу -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="tkachukk/kiss.jpg" alt="фотографія тимчасово зникла, вибачте за незручності" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="tkachukk/beer1.jpg" alt="фотографія тимчасово зникла, вибачте за незручності" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="tkachukk/old.jpg" alt="фотографія тимчасово зникла, вибачте за незручності" width="1100" height="500">
+    </div>
+  </div>
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>  
+  
+  
+  
 
   
   
