--- a/page2.html
+++ b/page2.html
@@ -15,24 +15,16 @@
   }
   </style>
 </head>
+  
+  
 <body>
+  
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h1>pub "OLDSKULL"</h1>
   <p>Любите провести час в шумній компанії? Поспілкуватися за келихом пива? Обожнюєте класичний рок?
       Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? Тоді вам до нас)</p> 
 </div>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <style>
- 
-  .carousel-inner img {
-    width: 100%;
-    height: 100%;
-  }
-  </style>
-</head>
-<body>
+
 <div id="demo" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ul class="carousel-indicators">
@@ -64,8 +56,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</head>
-<body>
+
                             <div class="container">
       <h2>Our team</h2>
       <p></p>
@@ -93,60 +84,75 @@
 
                           </div>
       
-<!--   Accordion -->
-    <head>
-  <title>Bootstrap Example</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</head>
-     <body>
+<!--  акордион -->
+
+  <title>OUR MENU</title>
 <div class="container">
-  <h2>Instagram сторінки групи та учасників</h2>
-  <p></p>
-  <p></p>
-  <p></p>                                          
-  <div class="dropdown">
-    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-      links
+  <h2>PIZZA</h2>
+  <div class="btn-group">
+    <button type="button" class="btn btn-primary">Маргарита</button>
+    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#"> <div class="card-body">
-          <a href="https://www.instagram.com/maneskinofficial/?utm_medium=copy_link"
-          href="default.asp"
-          target="_blank"> Band instagram </a></p></a> </div></a>
-      <a class="dropdown-item" href="#"> <div class="card-body">
-       <a href="https://www.instagram.com/ykaaar/?utm_medium=copy_link"
-          href="default.asp"
-          target="_blank"> Damiano David instagram </a></p></a> 
-        </div></a>
-      <a class="dropdown-item" href="#"><div class="card-body">
-        <a href="https:https://www.instagram.com/vicdeangelis/?utm_medium=copy_link"
-                                                                                 href="default.asp"
-                                                                                 target="_blank"> Victoria De Angelis instagram </a></p></a>    </div></a>
-       <a class="dropdown-item" href="#"><div class="card-body">
-         <a href="https://www.instagram.com/thomasraggi__/?utm_medium=copy_link"
-                                                                                 href="default.asp"
-                                                                                 target="_blank"> Thomas Raggi instagram </a></p></a>   </div></a>
-       <a class="dropdown-item" href="#">   <div class="card-body">
-        <a href="https://www.instagram.com/ethaneskin/?utm_medium=copy_link"
-                                                                                 href="default.asp"
-                                                                                 target="_blank"> Ethan Torchio instagram </a></p></a>  </div></a>
+      <a class="dropdown-item" href="#">Link 1</a>
+      <a class="dropdown-item" href="#">Link 2</a>
+    </div>
+  </div>
+  
+  <div class="btn-group">
+    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Link 1</a>
+      <a class="dropdown-item" href="#">Link 2</a>
+    </div>
+  </div>
+
+  <div class="btn-group">
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Link 1</a>
+      <a class="dropdown-item" href="#">Link 2</a>
+    </div>
+  </div>
+
+  <div class="btn-group">
+    <button type="button" class="btn btn-info">Info</button>
+    <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Link 1</a>
+      <a class="dropdown-item" href="#">Link 2</a>
+    </div>
+  </div>
+
+  <div class="btn-group">
+    <button type="button" class="btn btn-warning">Warning</button>
+    <button type="button" class="btn btn-warning dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Link 1</a>
+      <a class="dropdown-item" href="#">Link 2</a>
+    </div>
+  </div>
+
+  <div class="btn-group">
+    <button type="button" class="btn btn-danger">Danger</button>
+    <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Link 1</a>
+      <a class="dropdown-item" href="#">Link 2</a>
     </div>
   </div>
 </div>
-<head>
+
+
   <title></title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</head>
-<body>
+ 
 <div class="container">
   <h2> Фотогалерея</h2>
   <p></p> 
