--- a/page2.html
+++ b/page2.html
@@ -67,16 +67,15 @@
           <h4 class="card-title">Дракула</h4>
           <p class="card-text">бармен</p>
               </div>
-          <div class="card img-fluid" style=" width: 100%;
-        height: 100%;">
-        <img class="card-img-top" src="tkachukk/i.jpg" alt="Card image" style="width="400" height="400"">
+          <div class="card img-fluid" style=" width: 100%;  height: 100%;">
+        <img class="card-img-top" src="tkachukk/i.jpg" alt="Card image" style="width="400" height="350"">
         <div class="card-img-overlay">
           <h4 class="card-title"> Каяла</h4>
           <p class="card-text">Офіціант</p> </div>
 
 
-              <div class="card img-fluid" style="width="1100" height="500"">
-        <img class="card-img-top" src="tkachukk/i3.jpg" alt="Card image" style="width="400" height="400"">
+              <div class="card img-fluid" style="width="100%"; height="100%">
+        <img class="card-img-top" src="tkachukk/i3.jpg" alt="Card image" style="width="400" height="350"">
                 <div class="card-img-overlay">
                 <h4 class="card-title"> </h4>
                 <p class="card-text"></p> </div>
@@ -88,77 +87,48 @@
 
   <title>OUR MENU</title>
 <div class="container">
-  <h2>PIZZA</h2>
+  <h2></h2>
   <div class="btn-group">
-    <button type="button" class="btn btn-primary">Маргарита</button>
+    <button type="button" class="btn btn-primary">PIZZA</button>
     <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Link 1</a>
-      <a class="dropdown-item" href="#">Link 2</a>
+      <a class="dropdown-item" href="#">Маргарита</a>
+      <a class="dropdown-item" href="#">Квадро Форманджо</a>
     </div>
   </div>
   
   <div class="btn-group">
-    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-secondary">Grill menu</button>
     <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Link 1</a>
-      <a class="dropdown-item" href="#">Link 2</a>
+      <a class="dropdown-item" href="#">Курячий шашлик</a>
+      <a class="dropdown-item" href="#">Стейк</a>
     </div>
   </div>
 
   <div class="btn-group">
-    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-success">Salads</button>
     <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Link 1</a>
-      <a class="dropdown-item" href="#">Link 2</a>
+      <a class="dropdown-item" href="#">Капрезе</a>
+      <a class="dropdown-item" href="#">Цезарь</a>
     </div>
   </div>
 
-  <div class="btn-group">
-    <button type="button" class="btn btn-info">Info</button>
-    <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Link 1</a>
-      <a class="dropdown-item" href="#">Link 2</a>
-    </div>
-  </div>
-
-  <div class="btn-group">
-    <button type="button" class="btn btn-warning">Warning</button>
-    <button type="button" class="btn btn-warning dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Link 1</a>
-      <a class="dropdown-item" href="#">Link 2</a>
-    </div>
-  </div>
-
-  <div class="btn-group">
-    <button type="button" class="btn btn-danger">Danger</button>
-    <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Link 1</a>
-      <a class="dropdown-item" href="#">Link 2</a>
-    </div>
-  </div>
 </div>
 
 
-  <title></title>
+  <title>Ще декілька наших фотографій</title>
  
 <div class="container">
-  <h2> Фотогалерея</h2>
+  <h2>Фоткі</h2>
   <p></p> 
-  <img src="https://cutt.ly/EntWNdn" class="float-left" alt="Paris" width="304" height="236"> 
-  <img src="https://cutt.ly/TntEQQr" class="float-left" alt="Paris" width="304" height="236"> 
-   <img src="https://cutt.ly/VntERg2" class="float-left" alt="Paris" width="304" height="236"> 
+  <img src="tkachukk/butulka" class="float-left" alt="Paris" width="304" height="236"> 
+  <img src="tkachukk/fotochka" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="tkachukk/" class="float-left" alt="Paris" width="304" height="236"> 
    <img src="https://cutt.ly/7ntRutb" class="float-left" alt="Paris" width="304" height="236"> 
    <img src="https://cutt.ly/wntOtgO" class="float-left" alt="Paris" width="304" height="236"> 
    <img src="https://cutt.ly/9ntReS7" class="float-centr" alt="Paris" width="304" height="236"> 
