--- a/page2.html
+++ b/page2.html
@@ -26,22 +26,22 @@
 </div>
 
 <div id="demo" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
+ <!-- Indicators -->
   <ul class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
     <li data-target="#demo" data-slide-to="1"></li>
     <li data-target="#demo" data-slide-to="2"></li>
   </ul>
-  <!-- слайдшоу -->
+  <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="tkachukk/kiss.jpg" alt="фотографія тимчасово зникла, вибачте за незручності" width="1100" height="500">
+      <img src="https://cutt.ly/DntjRUl" alt="Переможці Євробачення 2021" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="tkachukk/beer1.jpg" alt="фотографія тимчасово зникла, вибачте за незручності" width="1100" height="500">
+      <img src="https://cutt.ly/tntlt0O" alt="Фото з виступу в фіналі з піснею Zitti E Buoni" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="tkachukk/old.jpg" alt="фотографія тимчасово зникла, вибачте за незручності" width="1100" height="500">
+      <img src="https://cutt.ly/9nthAhK" alt="Фото з прес-конференції" width="1100" height="500">
     </div>
   </div>
   <!-- Left and right controls -->
@@ -52,37 +52,49 @@
     <span class="carousel-control-next-icon"></span>
   </a>
 </div>
-<!--карточки(фоткі)-->
+<!--   Card Image  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-                            <div class="container">
-      <h2>Our team</h2>
-      <p></p>
-    <div class="card img-fluid" style="  width: 100%;
-        height: 100%;">
-        <img class="card-img-top" src="tkachukk/i7.jpg" alt="Card image" style="width="400" height="350"">
-              <div class="card-img-overlay">
-          <h4 class="card-title">Дракула</h4>
-          <p class="card-text">бармен</p>
+</head>
+<body>
+<div class="container">
+  <h2></h2>
+  <p></p>
+  <div class="card img-fluid" style="  width: 100%;
+    height: 100%;">
+    <img class="card-img-top" src="https://cutt.ly/TntbmyW" alt="Card image" style="width="1100" height="500"">
+    <div class="card-img-overlay">
+      <h4 class="card-title"> Даміано Давид</h4>
+      <p class="card-text">вокаліст</p>
+<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
+    </div>
+      <div class="card img-fluid" style=" width: 100%;
+    height: 100%;">
+    <img class="card-img-top" src="https://cutt.ly/untbOU5" alt="Card image" style="width="1100" height="500"">
+    <div class="card-img-overlay">
+      <h4 class="card-title"> Вікторія Де Анджеліс</h4>
+      <p class="card-text">басистка</p>
+<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
+    </div>
+          <div class="card img-fluid" style="width="1100" height="500"">
+    <img class="card-img-top" src="https://cutt.ly/9ntnqsP" alt="Card image" style="width="1100" height="500"">
+    <div class="card-img-overlay">
+      <h4 class="card-title"> Томас Раджі</h4>
+      <p class="card-text">гітарист</p>
+<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
+    </div>
               </div>
-          <div class="card img-fluid" style=" width: 100%;  height: 100%;">
-        <img class="card-img-top" src="tkachukk/i.jpg" alt="Card image" style="width="400" height="350"">
-        <div class="card-img-overlay">
-          <h4 class="card-title"> Каяла</h4>
-          <p class="card-text">Офіціант</p> </div>
-
-
-              <div class="card img-fluid" style="width="100%"; height="100%">
-        <img class="card-img-top" src="tkachukk/i3.jpg" alt="Card image" style="width="400" height="350"">
-                <div class="card-img-overlay">
-                <h4 class="card-title"> </h4>
-                <p class="card-text"></p> </div>
-              </div>
-
-                          </div>
-      
+          <div class="card img-fluid" style="width="1100" height="500"">
+    <img class="card-img-top" src="https://cutt.ly/TntbBtx" alt="Card image" style="width="1100" height="500"">
+    <div class="card-img-overlay">
+      <h4 class
+="card-title"> Ітан Торкйо</h4>
+      <p class="card-text">барабанщик</p>
+<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
+    </div>
+  </div>
+</div>
 <!--  акордион -->
 
   <title>OUR MENU</title>
