--- a/index.html
+++ b/index.html
@@ -44,28 +44,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
   </div>
 </div>
   
-<!-- Тіпа слайдшоу -->
-  <div class="mySlides w3-display-container w3-center">
-    <img src="tkachukk/old.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32  w3-hide-large">
-        
-    </div>
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img src="tkachukk/beer1.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-large">
- 
-    </div>
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img src="tkachukk/kiss.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-large">
-     
-    </div>
-  </div>
-  <script>
-   </header>
-   // автоматичне сладшоу
+
+  <h2 class="w3-center"></h2>
+
+<div class="w3-content w3-section" style="max-width:500px">
+  <img class="mySlides" src="tkachukk/old.jpg" style="width:100%">
+  <img class="mySlides" src="tkachukk/kiss.jpg" style="width:100%">
+  <img class="mySlides" src="tkachukk/beer1.jpg" style="width:100%">
+</div>
+
+<script>
 var myIndex = 0;
 carousel();
 
@@ -78,12 +66,13 @@ function carousel() {
   myIndex++;
   if (myIndex > x.length) {myIndex = 1}    
   x[myIndex-1].style.display = "block";  
-  setTimeout(carousel, 4000);    
+  setTimeout(carousel, 2000);
 }
-    }
-}
-</script>  -->
+</script>
 
+  
+  
+  
   
 
   
