--- a/page2.html
+++ b/page2.html
@@ -32,16 +32,16 @@
     <li data-target="#demo" data-slide-to="1"></li>
     <li data-target="#demo" data-slide-to="2"></li>
   </ul>
-  <!-- The slideshow -->
+  <!-- slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://cutt.ly/DntjRUl" alt="Переможці Євробачення 2021" width="1100" height="500">
+      <img src="tkachukk/beer1.jpg" alt="" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="https://cutt.ly/tntlt0O" alt="Фото з виступу в фіналі з піснею Zitti E Buoni" width="1100" height="500">
+      <img src="tkachukk/kiss.jpg" alt="" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="https://cutt.ly/9nthAhK" alt="Фото з прес-конференції" width="1100" height="500">
+      <img src="tkachukk/old.jpg" alt="" width="1100" height="500">
     </div>
   </div>
   <!-- Left and right controls -->
