--- a/index.html
+++ b/index.html
@@ -45,28 +45,53 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 </div>
   
 
-  <h2 class="w3-center"></h2>
+<div class="w3-container">
+  <h2>Slideshow Indicators</h2>
+  <p>An example of using buttons to indicate how many slides there are in the slideshow, and which slide the user is currently viewing.</p>
+</div>
 
-<div class="w3-content w3-section" style="max-width:500px">
-  <img class="mySlides" src="tkachukk/old.jpg" style="width:100%">
+<div class="w3-content" style="max-width:800px">
   <img class="mySlides" src="tkachukk/kiss.jpg" style="width:100%">
+  <img class="mySlides" src="tkachukk/old.jpg" style="width:100%">
   <img class="mySlides" src="tkachukk/beer1.jpg" style="width:100%">
 </div>
 
-<script>
-var myIndex = 0;
-carousel();
+<div class="w3-center">
+  <div class="w3-section">
+    <button class="w3-button w3-light-grey" onclick="plusDivs(-1)">❮ </button>
+    <button class="w3-button w3-light-grey" onclick="plusDivs(1)"> ❯</button>
+  </div>
+  <button class="w3-button demo" onclick="currentDiv(1)">1</button> 
+  <button class="w3-button demo" onclick="currentDiv(2)">2</button> 
+  <button class="w3-button demo" onclick="currentDiv(3)">3</button> 
+</div>
 
-function carousel() {
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function currentDiv(n) {
+  showDivs(slideIndex = n);
+}
+
+function showDivs(n) {
   var i;
   var x = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demo");
+  if (n > x.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = x.length}
   for (i = 0; i < x.length; i++) {
     x[i].style.display = "none";  
   }
-  myIndex++;
-  if (myIndex > x.length) {myIndex = 1}    
-  x[myIndex-1].style.display = "block";  
-  setTimeout(carousel, 2000);
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" w3-red", "");
+  }
+  x[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " w3-red";
 }
 </script>
 
