--- a/page2.html
+++ b/page2.html
@@ -15,33 +15,44 @@
   }
   </style>
 </head>
-  
-  
 <body>
-  
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>pub "OLDSKULL"</h1>
+  <h1>PUB "OLDSKULL"</h1>
   <p>Любите провести час в шумній компанії? Поспілкуватися за келихом пива? Обожнюєте класичний рок?
-      Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію? Тоді вам до нас)</p> 
+      Або ж ви хочете потрапити на live концерт,переглянути футбольну трансляцію?</p> 
 </div>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <style>
 
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+  </style>
+</head>
+<body>
 <div id="demo" class="carousel slide" data-ride="carousel">
- <!-- Indicators -->
+  
+  
+  <!-- Indicators -->
   <ul class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
     <li data-target="#demo" data-slide-to="1"></li>
     <li data-target="#demo" data-slide-to="2"></li>
   </ul>
-  <!-- slideshow -->
+  
+  <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="tkachukk/beer1.jpg" alt="" width="1100" height="500">
+      <img src="tkachukk/kiss.jpg" alt="Переможці Євробачення 2021" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="tkachukk/kiss.jpg" alt="" width="1100" height="500">
+      <img src="tkachukk/old.jpg" alt="Фото з виступу в фіналі з піснею Zitti E Buoni" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="tkachukk/old.jpg" alt="" width="1100" height="500">
+      <img src="https://cutt.ly/9nthAhK" alt="Фото з прес-конференції" width="1100" height="500">
     </div>
   </div>
   <!-- Left and right controls -->
@@ -56,7 +67,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+</head>
+<body>
 <div class="container">
   <h2></h2>
   <p></p>
@@ -94,52 +106,66 @@
     </div>
   </div>
 </div>
-<!--  акордион -->
-
-  <title>OUR MENU</title>
+<!--   Accordion -->
+    <head>
+  <title>Menu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+     <body>
 <div class="container">
-  <h2></h2>
-  <div class="btn-group">
-    <button type="button" class="btn btn-primary">PIZZA</button>
-    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+  <h2>our menu</h2>
+  <p></p>
+  <p></p>
+  <p></p>                                          
+  <div class="dropdown">
+    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+      links
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Маргарита</a>
-      <a class="dropdown-item" href="#">Квадро Форманджо</a>
+      <a class="dropdown-item" href="#"> <div class="card-body">
+          <a href="https://www.instagram.com/maneskinofficial/?utm_medium=copy_link"
+          href="default.asp"
+          target="_blank"> Band instagram </a></p></a> </div></a>
+      <a class="dropdown-item" href="#"> <div class="card-body">
+       <a href="https://www.instagram.com/ykaaar/?utm_medium=copy_link"
+          href="default.asp"
+          target="_blank"> Damiano David instagram </a></p></a> 
+        </div></a>
+      <a class="dropdown-item" href="#"><div class="card-body">
+        <a href="https:https://www.instagram.com/vicdeangelis/?utm_medium=copy_link"
+                                                                                 href="default.asp"
+                                                                                 target="_blank"> Victoria De Angelis instagram </a></p></a>    </div></a>
+       <a class="dropdown-item" href="#"><div class="card-body">
+         <a href="https://www.instagram.com/thomasraggi__/?utm_medium=copy_link"
+                                                                                 href="default.asp"
+                                                                                 target="_blank"> Thomas Raggi instagram </a></p></a>   </div></a>
+       <a class="dropdown-item" href="#">   <div class="card-body">
+        <a href="https://www.instagram.com/ethaneskin/?utm_medium=copy_link"
+                                                                                 href="default.asp"
+                                                                                 target="_blank"> Ethan Torchio instagram </a></p></a>  </div></a>
     </div>
   </div>
-  
-  <div class="btn-group">
-    <button type="button" class="btn btn-secondary">Grill menu</button>
-    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Курячий шашлик</a>
-      <a class="dropdown-item" href="#">Стейк</a>
-    </div>
-  </div>
-
-  <div class="btn-group">
-    <button type="button" class="btn btn-success">Salads</button>
-    <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Капрезе</a>
-      <a class="dropdown-item" href="#">Цезарь</a>
-    </div>
-  </div>
-
 </div>
-
-
-  <title>Ще декілька наших фотографій</title>
- 
+<head>
+  <title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body>
 <div class="container">
-  <h2>Фоткі</h2>
+  <h2> Фотогалерея</h2>
   <p></p> 
-  <img src="tkachukk/butulka" class="float-left" alt="Paris" width="304" height="236"> 
-  <img src="tkachukk/fotochka" class="float-left" alt="Paris" width="304" height="236"> 
-   <img src="tkachukk/" class="float-left" alt="Paris" width="304" height="236"> 
+  <img src="https://cutt.ly/EntWNdn" class="float-left" alt="Paris" width="304" height="236"> 
+  <img src="https://cutt.ly/TntEQQr" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="https://cutt.ly/VntERg2" class="float-left" alt="Paris" width="304" height="236"> 
    <img src="https://cutt.ly/7ntRutb" class="float-left" alt="Paris" width="304" height="236"> 
    <img src="https://cutt.ly/wntOtgO" class="float-left" alt="Paris" width="304" height="236"> 
    <img src="https://cutt.ly/9ntReS7" class="float-centr" alt="Paris" width="304" height="236"> 
