--- a/page2.html
+++ b/page2.html
@@ -46,13 +46,13 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="tkachukk/kiss.jpg" alt="Переможці Євробачення 2021" width="1100" height="500">
+      <img src="tkachukk/kiss.jpg" alt="" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="tkachukk/old.jpg" alt="Фото з виступу в фіналі з піснею Zitti E Buoni" width="1100" height="500">
+      <img src="tkachukk/old.jpg" alt="" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="https://cutt.ly/9nthAhK" alt="Фото з прес-конференції" width="1100" height="500">
+      <img src="https://cutt.ly/9nthAhK" alt="" width="1100" height="500">
     </div>
   </div>
   <!-- Left and right controls -->
@@ -63,93 +63,89 @@
     <span class="carousel-control-next-icon"></span>
   </a>
 </div>
-<!--   Card Image  -->
+<!-- карточки  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
-  <h2></h2>
-  <p></p>
+  <h2>Завітайте до пабу “Oldskull”.</h2>
+  <p>Насолодіться панорамним краєвидом Львова та смачними стравами на свіжому повітрі. Ми знаходимось в центрі міста. 
+      У нас Ви зможете відпочити в затишній атмосфері, насолодитися смаком крафтового пива і відчути всю барвистість смаку нашої кухні.
+      Рок музика, смачне пиво, відмінне вино, коктейлі - і це ще не всі переваги Пабу Oldskull.
+      Так що чекаємо, піпл. Свіже живе регіональне пиво чи місцевий ремісничий крафт?
+      Вибір за вами. Але знайте: у нас є все. Шість кранів свіжака)Так що, приходьте</p>
   <div class="card img-fluid" style="  width: 100%;
     height: 100%;">
-    <img class="card-img-top" src="https://cutt.ly/TntbmyW" alt="Card image" style="width="1100" height="500"">
+    <img class="card-img-top" src="tkachukk/i7.jpg" alt="Card image" style="width="1100" height="500"">
     <div class="card-img-overlay">
-      <h4 class="card-title"> Даміано Давид</h4>
-      <p class="card-text">вокаліст</p>
-<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
+      <h4 class="card-title"> </h4>
+      <p class="card-text"></p>
+
     </div>
       <div class="card img-fluid" style=" width: 100%;
     height: 100%;">
-    <img class="card-img-top" src="https://cutt.ly/untbOU5" alt="Card image" style="width="1100" height="500"">
+    <img class="card-img-top" src="tkachukk/i.jpg" alt="Card image" style="width="1100" height="500"">
     <div class="card-img-overlay">
-      <h4 class="card-title"> Вікторія Де Анджеліс</h4>
-      <p class="card-text">басистка</p>
-<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
+      <h4 class="card-title"> </h4>
+      <p class="card-text"></p>
+
     </div>
           <div class="card img-fluid" style="width="1100" height="500"">
-    <img class="card-img-top" src="https://cutt.ly/9ntnqsP" alt="Card image" style="width="1100" height="500"">
+    <img class="card-img-top" src="tkachukk/i3.jpg" alt="Card image" style="width="1100" height="500"">
     <div class="card-img-overlay">
-      <h4 class="card-title"> Томас Раджі</h4>
-      <p class="card-text">гітарист</p>
-<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
+      <h4 class="card-title"> </h4>
+      <p class="card-text"></p>
     </div>
               </div>
-          <div class="card img-fluid" style="width="1100" height="500"">
-    <img class="card-img-top" src="https://cutt.ly/TntbBtx" alt="Card image" style="width="1100" height="500"">
-    <div class="card-img-overlay">
-      <h4 class
-="card-title"> Ітан Торкйо</h4>
-      <p class="card-text">барабанщик</p>
-<!--       <a href="#" class="btn btn-primary">See Profile</a> -->
-    </div>
-  </div>
+        
 </div>
-<!--   Accordion -->
-    <head>
-  <title>Menu</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</head>
-     <body>
 <div class="container">
-  <h2>our menu</h2>
-  <p></p>
-  <p></p>
-  <p></p>                                          
-  <div class="dropdown">
-    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-      links
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#"> <div class="card-body">
-          <a href="https://www.instagram.com/maneskinofficial/?utm_medium=copy_link"
-          href="default.asp"
-          target="_blank"> Band instagram </a></p></a> </div></a>
-      <a class="dropdown-item" href="#"> <div class="card-body">
-       <a href="https://www.instagram.com/ykaaar/?utm_medium=copy_link"
-          href="default.asp"
-          target="_blank"> Damiano David instagram </a></p></a> 
-        </div></a>
-      <a class="dropdown-item" href="#"><div class="card-body">
-        <a href="https:https://www.instagram.com/vicdeangelis/?utm_medium=copy_link"
-                                                                                 href="default.asp"
-                                                                                 target="_blank"> Victoria De Angelis instagram </a></p></a>    </div></a>
-       <a class="dropdown-item" href="#"><div class="card-body">
-         <a href="https://www.instagram.com/thomasraggi__/?utm_medium=copy_link"
-                                                                                 href="default.asp"
-                                                                                 target="_blank"> Thomas Raggi instagram </a></p></a>   </div></a>
-       <a class="dropdown-item" href="#">   <div class="card-body">
-        <a href="https://www.instagram.com/ethaneskin/?utm_medium=copy_link"
-                                                                                 href="default.asp"
-                                                                                 target="_blank"> Ethan Torchio instagram </a></p></a>  </div></a>
+  
+  
+  <h2>MENU</h2>
+ 
+  <div id="accordion">
+    <div class="card">
+      <div class="card-header">
+        <a class="card-link" data-toggle="collapse" href="#collapseOne">
+         PIZZA
+        </a>
+      </div>
+      <div id="collapseOne" class="collapse show" data-parent="#accordion">
+        <div class="card-body">
+    Маргарита-Квадро Формаджо-Сирна
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+      GRILL MENU
+      </a>
+      </div>
+      <div id="collapseTwo" class="collapse" data-parent="#accordion">
+        <div class="card-body">
+Курячий шашлик-Стейк
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+        SALADS
+        </a>
+      </div>
+      <div id="collapseThree" class="collapse" data-parent="#accordion">
+        <div class="card-body">
+ Цезар-Капрезе
+        </div>
+      </div>
     </div>
   </div>
 </div>
+    
 <head>
   <title></title>
   <meta charset="utf-8">
@@ -161,14 +157,14 @@
 </head>
 <body>
 <div class="container">
-  <h2> Фотогалерея</h2>
+  <h2> Фоткі</h2>
   <p></p> 
-  <img src="https://cutt.ly/EntWNdn" class="float-left" alt="Paris" width="304" height="236"> 
-  <img src="https://cutt.ly/TntEQQr" class="float-left" alt="Paris" width="304" height="236"> 
-   <img src="https://cutt.ly/VntERg2" class="float-left" alt="Paris" width="304" height="236"> 
-   <img src="https://cutt.ly/7ntRutb" class="float-left" alt="Paris" width="304" height="236"> 
-   <img src="https://cutt.ly/wntOtgO" class="float-left" alt="Paris" width="304" height="236"> 
-   <img src="https://cutt.ly/9ntReS7" class="float-centr" alt="Paris" width="304" height="236"> 
+  <img src="tkachukk/butulka.jpg" class="float-left" alt="Paris" width="304" height="236"> 
+  <img src="tkachukk/fotochka.jpg" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="tkachukk/pivas.jpg" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="tkachukk/smoke.jpg" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="tkachukk/pivas1.jpg" class="float-left" alt="Paris" width="304" height="236"> 
+   <img src="tkachukk/revo.jpg" class="float-centr" alt="Paris" width="304" height="236"> 
 </div>
 </body>
 </html>
